# math-stats

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
math_stats/: __init__.py  core.py
tests/: test_math_stats.py
